Bug 401552 - Dolphin crash when renaming a directory
Summary: Dolphin crash when renaming a directory
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.52.0
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: David Faure
URL:
Keywords: drkonqi
: 402059 402821 403418 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-11-29 23:05 UTC by Eridani Rodríguez
Modified: 2024-02-20 14:40 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.54
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (8.63 KB, text/plain)
2018-11-29 23:43 UTC, Eridani Rodríguez
Details
New crash information added by DrKonqi (8.71 KB, text/plain)
2018-12-05 08:57 UTC, ascaris
Details
New crash information added by DrKonqi (2.93 KB, text/plain)
2018-12-27 00:26 UTC, Kerry N
Details
New crash information added by DrKonqi (2.06 KB, text/plain)
2024-02-20 14:40 UTC, Masoud
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eridani Rodríguez 2018-11-29 23:05:51 UTC
Application: dolphin (18.08.3)

Qt Version: 5.11.2
Frameworks Version: 5.52.0
Operating System: Linux 4.15.0-39-generic x86_64
Distribution: KDE neon User Edition 5.14

-- Information about the crash:
- What I was doing when the application crashed:

I had a Dolphin window with 4 tabs open with diferent directories when I tried to rename a directory insde a tab Dolphin crashed, this folder wasn't opened on any of those tabs.

Tried to reproduce the crash even with the same folders, but couldn't.

The crash does not seem to be reproducible.

-- Backtrace:
Application: Dolphin (dolphin), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f24db633800 (LWP 3216))]

Thread 3 (Thread 0x7f24b0da3700 (LWP 3290)):
#0  0x00007f24daebdbf9 in __GI___poll (fds=0x7f24ac0049b0, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f24cd709539 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f24cd70964c in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f24d50a004b in QEventDispatcherGlib::processEvents (this=0x7f24ac000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007f24d504430a in QEventLoop::exec (this=this@entry=0x7f24b0da2da0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#5  0x00007f24d4e6fbba in QThread::exec (this=<optimized out>) at thread/qthread.cpp:525
#6  0x00007f24d4e7aadb in QThreadPrivate::start (arg=0x55c71ae670e0) at thread/qthread_unix.cpp:367
#7  0x00007f24cfaf16db in start_thread (arg=0x7f24b0da3700) at pthread_create.c:463
#8  0x00007f24daeca88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7f24c090e700 (LWP 3230)):
#0  0x00007f24daeb90b4 in __GI___libc_read (fd=7, buf=0x7f24c090db60, nbytes=16) at ../sysdeps/unix/sysv/linux/read.c:27
#1  0x00007f24cd74dcd0 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f24cd709027 in g_main_context_check () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f24cd7094e0 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f24cd70964c in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f24d50a004b in QEventDispatcherGlib::processEvents (this=0x7f24b4000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#6  0x00007f24d504430a in QEventLoop::exec (this=this@entry=0x7f24c090dd70, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#7  0x00007f24d4e6fbba in QThread::exec (this=<optimized out>) at thread/qthread.cpp:525
#8  0x00007f24d54e6e45 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#9  0x00007f24d4e7aadb in QThreadPrivate::start (arg=0x7f24d575ed60) at thread/qthread_unix.cpp:367
#10 0x00007f24cfaf16db in start_thread (arg=0x7f24c090e700) at pthread_create.c:463
#11 0x00007f24daeca88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7f24db633800 (LWP 3216)):
[KCrash Handler]
#6  std::__atomic_base<int>::load (__m=std::memory_order_relaxed, this=0x81) at /usr/include/c++/7/bits/atomic_base.h:396
#7  QAtomicOps<int>::load<int> (_q_value=...) at ../../include/QtCore/../../src/corelib/thread/qatomic_cxx11.h:227
#8  QBasicAtomicInteger<int>::load (this=0x81) at ../../include/QtCore/../../src/corelib/thread/qbasicatomic.h:103
#9  QtPrivate::RefCount::ref (this=0x81) at ../../include/QtCore/../../src/corelib/tools/qrefcount.h:55
#10 QString::QString (other=..., this=0x7ffe4edc7700) at ../../include/QtCore/../../src/corelib/tools/qstring.h:953
#11 QUrlPrivate::appendPath (this=0x55c71aff0bc0, appendTo=..., options=..., appendingTo=QUrlPrivate::Path) at io/qurl.cpp:960
#12 0x00007f24d4f99d58 in QUrl::path (this=this@entry=0x7ffe4edc7898, options=...) at io/qurl.cpp:2615
#13 0x00007f24d4f99da4 in QUrl::fileName (this=this@entry=0x7ffe4edc7898, options=..., options@entry=...) at io/qurl.cpp:2678
#14 0x00007f24d9670490 in KCoreDirListerCache::renameDir (this=this@entry=0x7f24d98de280 <(anonymous namespace)::Q_QGS_kDirListerCache::innerFunction()::holder>, oldUrl=..., newUrl=...) at ./src/core/kcoredirlister.cpp:1581
#15 0x00007f24d967243f in KCoreDirListerCache::slotFileRenamed (this=0x7f24d98de280 <(anonymous namespace)::Q_QGS_kDirListerCache::innerFunction()::holder>, _src=..., _dst=..., dstPath=...) at ./src/core/kcoredirlister.cpp:969
#16 0x00007f24d507518f in QtPrivate::QSlotObjectBase::call (a=0x7ffe4edc7b20, r=0x7f24d98de280 <(anonymous namespace)::Q_QGS_kDirListerCache::innerFunction()::holder>, this=0x55c71ad5c550) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:376
#17 QMetaObject::activate (sender=0x55c71ad07270, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7ffe4edc7b20) at kernel/qobject.cpp:3754
#18 0x00007f24d5075747 in QMetaObject::activate (sender=<optimized out>, m=m@entry=0x7f24d98db4a0 <OrgKdeKDirNotifyInterface::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7ffe4edc7b20) at kernel/qobject.cpp:3633
#19 0x00007f24d9693aaf in OrgKdeKDirNotifyInterface::FileRenamedWithLocalPath (this=<optimized out>, _t1=..., _t2=..., _t3=...) at ./obj-x86_64-linux-gnu/src/core/KF5KIOCore_autogen/EWIEGA46WW/moc_kdirnotify.cpp:220
#20 0x00007f24d9693d9c in OrgKdeKDirNotifyInterface::qt_static_metacall (_o=_o@entry=0x55c71ad07270, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=_id@entry=1, _a=_a@entry=0x7ffe4edc7c60) at ./obj-x86_64-linux-gnu/src/core/KF5KIOCore_autogen/EWIEGA46WW/moc_kdirnotify.cpp:103
#21 0x00007f24d9694b55 in OrgKdeKDirNotifyInterface::qt_metacall (this=0x55c71ad07270, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x7ffe4edc7c60) at ./obj-x86_64-linux-gnu/src/core/KF5KIOCore_autogen/EWIEGA46WW/moc_kdirnotify.cpp:199
#22 0x00007f24d54f1f58 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#23 0x00007f24d5075be2 in QObject::event (this=0x55c71ad07270, e=<optimized out>) at kernel/qobject.cpp:1251
#24 0x00007f24d6061e1c in QApplicationPrivate::notify_helper (this=this@entry=0x55c71a941520, receiver=receiver@entry=0x55c71ad07270, e=e@entry=0x7f24b4066780) at kernel/qapplication.cpp:3727
#25 0x00007f24d60693ef in QApplication::notify (this=0x7ffe4edc8330, receiver=0x55c71ad07270, e=0x7f24b4066780) at kernel/qapplication.cpp:3486
#26 0x00007f24d5045fe8 in QCoreApplication::notifyInternal2 (receiver=0x55c71ad07270, event=event@entry=0x7f24b4066780) at kernel/qcoreapplication.cpp:1048
#27 0x00007f24d5048b2d in QCoreApplication::sendEvent (event=0x7f24b4066780, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234
#28 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x55c71a93f7c0) at kernel/qcoreapplication.cpp:1745
#29 0x00007f24d50490e8 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1599
#30 0x00007f24d50a09f3 in postEventSourceDispatch (s=0x55c71a988150) at kernel/qeventdispatcher_glib.cpp:276
#31 0x00007f24cd709387 in g_main_context_dispatch () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#32 0x00007f24cd7095c0 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#33 0x00007f24cd70964c in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#34 0x00007f24d50a002f in QEventDispatcherGlib::processEvents (this=0x55c71a986cc0, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#35 0x00007f24c64f1761 in QPAEventDispatcherGlib::processEvents (this=0x55c71a986cc0, flags=...) at qeventdispatcher_glib.cpp:69
#36 0x00007f24d504430a in QEventLoop::exec (this=this@entry=0x7ffe4edc8230, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#37 0x00007f24d504d4d0 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1336
#38 0x00007f24d585b9cc in QGuiApplication::exec () at kernel/qguiapplication.cpp:1762
#39 0x00007f24d6061d75 in QApplication::exec () at kernel/qapplication.cpp:2901
#40 0x00007f24db1de03a in kdemain (argc=<optimized out>, argv=<optimized out>) at ./src/main.cpp:166
#41 0x00007f24dadcab97 in __libc_start_main (main=0x55c7191db720 <main>, argc=3, argv=0x7ffe4edc84b8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffe4edc84a8) at ../csu/libc-start.c:310
#42 0x000055c7191db75a in _start ()

Possible duplicates by query: bug 395128, bug 393046, bug 392629.

Reported using DrKonqi
Comment 1 Eridani Rodríguez 2018-11-29 23:43:44 UTC
Created attachment 116576 [details]
New crash information added by DrKonqi

dolphin (18.08.3) using Qt 5.11.2

- What I was doing when the application crashed:

Was renaming more folders, adding underscore at the end of the folder like this: MyFolder_

-- Backtrace (Reduced):
#6  std::__atomic_base<int>::operator++ (this=0x100000000) at /usr/include/c++/7/bits/atomic_base.h:296
#7  QAtomicOps<int>::ref<int> (_q_value=...) at ../../include/QtCore/../../src/corelib/thread/qatomic_cxx11.h:265
[...]
#9  QUrl::QUrl (this=0x7ffe5d27bdb8, other=...) at io/qurl.cpp:1876
#10 0x00007ff5be0f8ee5 in KFileItem::url (this=this@entry=0x7ffe5d27bda8) at ./src/core/kfileitem.cpp:1387
#11 0x00007ff5be1a9473 in KCoreDirListerCache::renameDir (this=this@entry=0x7ff5be417280 <(anonymous namespace)::Q_QGS_kDirListerCache::innerFunction()::holder>, oldUrl=..., newUrl=...) at ./src/core/kcoredirlister.cpp:1579
Comment 2 Elvis Angelaccio 2018-12-01 16:06:05 UTC
If you manage to reproduce this crash, please try to get a valgrind log as described here: https://community.kde.org/Dolphin/FAQ/Crashes
Comment 3 ascaris 2018-12-05 08:57:20 UTC
Created attachment 116684 [details]
New crash information added by DrKonqi

dolphin (18.08.3) using Qt 5.11.2

- What I was doing when the application crashed:

Renaming .wine inside my ~ directory.  Dolphin crashed as soon as I hit enter.

-- Backtrace (Reduced):
#6  std::__atomic_base<int>::operator++ (this=0x100000000) at /usr/include/c++/7/bits/atomic_base.h:296
#7  QAtomicOps<int>::ref<int> (_q_value=...) at ../../include/QtCore/../../src/corelib/thread/qatomic_cxx11.h:265
[...]
#9  QUrl::QUrl (this=0x7ffda75bf568, other=...) at io/qurl.cpp:1876
#10 0x00007f24654b3ee5 in KFileItem::url (this=this@entry=0x7ffda75bf558) at ./src/core/kfileitem.cpp:1387
#11 0x00007f2465564473 in KCoreDirListerCache::renameDir (this=this@entry=0x7f24657d2280 <(anonymous namespace)::Q_QGS_kDirListerCache::innerFunction()::holder>, oldUrl=..., newUrl=...) at ./src/core/kcoredirlister.cpp:1579
Comment 4 Christoph Feck 2018-12-05 15:06:36 UTC
Also getting this frequently, but not consistently. The crash happens after the rename is executed.
Comment 5 Christoph Feck 2018-12-13 15:15:46 UTC
*** Bug 402059 has been marked as a duplicate of this bug. ***
Comment 6 Christoph Feck 2018-12-13 15:17:32 UTC
I was using "Sort by > Type" and "Details" view mode with expandable folders enabled, if this is relevant.
Comment 7 Janek 2018-12-13 16:01:16 UTC
Yes, I also experienced this multiple times, as seen in https://bugs.kde.org/show_bug.cgi?id=402059
The renaming operation is carried out, but it crashes immediately afterwards. For me it actually happened multiple times in a row as I renamed the same folder multiple times.
Comment 8 Elvis Angelaccio 2018-12-14 21:27:32 UTC
Seems the crash is in kio. Here's a valgrind log:

Invalid read of size 8
   at 0x56B5628: QSharedDataPointer<KFileItemPrivate>::QSharedDataPointer(QSharedDataPointer<KFileItemPrivate> const&) (qshareddata.h:92)
   by 0x56AF5D6: KFileItem::KFileItem(KFileItem const&) (kfileitem.h:47)
   by 0x575FDFB: KCoreDirListerCache::renameDir(QUrl const&, QUrl const&) (kcoredirlister.cpp:1576)
   by 0x575B041: KCoreDirListerCache::slotFileRenamed(QString const&, QString const&, QString const&) (kcoredirlister.cpp:969)
   by 0x577BF39: QtPrivate::FunctorCall<QtPrivate::IndexesList<0, 1, 2>, QtPrivate::List<QString const&, QString const&, QString const&>, void, void (KCoreDirListerCache::*)(QString const&, QString const&, QString const&)>::call(void (KCoreDirListerCache::*)(QString const&, QString const&, QString const&), KCoreDirListerCache*, void**) (qobjectdefs_impl.h:152)
   by 0x577A630: void QtPrivate::FunctionPointer<void (KCoreDirListerCache::*)(QString const&, QString const&, QString const&)>::call<QtPrivate::List<QString const&, QString const&, QString const&>, void>(void (KCoreDirListerCache::*)(QString const&, QString const&, QString const&), KCoreDirListerCache*, void**) (qobjectdefs_impl.h:185)
   by 0x5777250: QtPrivate::QSlotObject<void (KCoreDirListerCache::*)(QString const&, QString const&, QString const&), QtPrivate::List<QString const&, QString const&, QString const&>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (qobjectdefs_impl.h:414)
   by 0x75C93BF: QMetaObject::activate(QObject*, int, int, void**) (in /usr/lib/libQt5Core.so.5.12.0)
   by 0x5798ED3: OrgKdeKDirNotifyInterface::FileRenamedWithLocalPath(QString const&, QString const&, QString const&) (moc_kdirnotify.cpp:224)
   by 0x579889D: OrgKdeKDirNotifyInterface::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (moc_kdirnotify.cpp:103)
   by 0x5798DAB: OrgKdeKDirNotifyInterface::qt_metacall(QMetaObject::Call, int, void**) (moc_kdirnotify.cpp:203)
   by 0x72B19EE: ??? (in /usr/lib/libQt5DBus.so.5.12.0)
 Address 0x11350758 is 72 bytes inside a block of size 128 free'd
   at 0x4839D7B: realloc (vg_replace_malloc.c:826)
   by 0x7439992: QListData::realloc_grow(int) (in /usr/lib/libQt5Core.so.5.12.0)
   by 0x7439A3B: QListData::append(int) (in /usr/lib/libQt5Core.so.5.12.0)
   by 0x576BE43: QList<KFileItem>::insert(QList<KFileItem>::iterator, KFileItem const&) (qlist.h:521)
   by 0x576B1EC: KCoreDirListerCache::DirItem::insert(KFileItem const&) (kcoredirlister_p.h:422)
   by 0x576AC8A: KCoreDirListerCache::reinsert(KFileItem const&, QUrl const&) (kcoredirlister_p.h:310)
   by 0x5760053: KCoreDirListerCache::renameDir(QUrl const&, QUrl const&) (kcoredirlister.cpp:1584)
   by 0x575B041: KCoreDirListerCache::slotFileRenamed(QString const&, QString const&, QString const&) (kcoredirlister.cpp:969)
   by 0x577BF39: QtPrivate::FunctorCall<QtPrivate::IndexesList<0, 1, 2>, QtPrivate::List<QString const&, QString const&, QString const&>, void, void (KCoreDirListerCache::*)(QString const&, QString const&, QString const&)>::call(void (KCoreDirListerCache::*)(QString const&, QString const&, QString const&), KCoreDirListerCache*, void**) (qobjectdefs_impl.h:152)
   by 0x577A630: void QtPrivate::FunctionPointer<void (KCoreDirListerCache::*)(QString const&, QString const&, QString const&)>::call<QtPrivate::List<QString const&, QString const&, QString const&>, void>(void (KCoreDirListerCache::*)(QString const&, QString const&, QString const&), KCoreDirListerCache*, void**) (qobjectdefs_impl.h:185)
   by 0x5777250: QtPrivate::QSlotObject<void (KCoreDirListerCache::*)(QString const&, QString const&, QString const&), QtPrivate::List<QString const&, QString const&, QString const&>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (qobjectdefs_impl.h:414)
   by 0x75C93BF: QMetaObject::activate(QObject*, int, int, void**) (in /usr/lib/libQt5Core.so.5.12.0)
 Block was alloc'd at
   at 0x4839D7B: realloc (vg_replace_malloc.c:826)
   by 0x7439992: QListData::realloc_grow(int) (in /usr/lib/libQt5Core.so.5.12.0)
   by 0x7439C1A: QListData::insert(int) (in /usr/lib/libQt5Core.so.5.12.0)
   by 0x576BE43: QList<KFileItem>::insert(QList<KFileItem>::iterator, KFileItem const&) (qlist.h:521)
   by 0x576B1EC: KCoreDirListerCache::DirItem::insert(KFileItem const&) (kcoredirlister_p.h:422)
   by 0x575D78C: KCoreDirListerCache::slotEntries(KIO::Job*, QList<KIO::UDSEntry> const&) (kcoredirlister.cpp:1252)
   by 0x577C268: QtPrivate::FunctorCall<QtPrivate::IndexesList<0, 1>, QtPrivate::List<KIO::Job*, QList<KIO::UDSEntry> const&>, void, void (KCoreDirListerCache::*)(KIO::Job*, QList<KIO::UDSEntry> const&)>::call(void (KCoreDirListerCache::*)(KIO::Job*, QList<KIO::UDSEntry> const&), KCoreDirListerCache*, void**) (qobjectdefs_impl.h:152)
   by 0x577AAC8: void QtPrivate::FunctionPointer<void (KCoreDirListerCache::*)(KIO::Job*, QList<KIO::UDSEntry> const&)>::call<QtPrivate::List<KIO::Job*, QList<KIO::UDSEntry> const&>, void>(void (KCoreDirListerCache::*)(KIO::Job*, QList<KIO::UDSEntry> const&), KCoreDirListerCache*, void**) (qobjectdefs_impl.h:185)
   by 0x5777D4A: QtPrivate::QSlotObject<void (KCoreDirListerCache::*)(KIO::Job*, QList<KIO::UDSEntry> const&), QtPrivate::List<KIO::Job*, QList<KIO::UDSEntry> const&>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (qobjectdefs_impl.h:414)
   by 0x75C93BF: QMetaObject::activate(QObject*, int, int, void**) (in /usr/lib/libQt5Core.so.5.12.0)
   by 0x5703C23: KIO::ListJob::entries(KIO::Job*, QList<KIO::UDSEntry> const&) (moc_listjob.cpp:236)
   by 0x57027CE: KIO::ListJobPrivate::slotListEntries(QList<KIO::UDSEntry> const&) (listjob.cpp:154)
Comment 9 Elvis Angelaccio 2018-12-14 22:19:24 UTC
(In reply to Christoph Feck from comment #4)
> Also getting this frequently, but not consistently. The crash happens after
> the rename is executed.

Does it help to revert 20b89972b643b5fc049055b1c6cc92c598c6dcb6 in kio?
Comment 10 Jaime Torres 2018-12-24 08:35:06 UTC
Git commit 211c3a680ea762ec3a674f2f29de5bbf7ae36d8e by Jaime Torres Amate.
Committed on 24/12/2018 at 08:34.
Pushed by jtamate into branch 'master'.

Change the path for every item of the subdirectories in a directory rename

Summary:
As only the items in subdirectories of the renamed one are modified, if all the items are changed the same part of the path with the same new value, the order is preserved, therefore modify the path directly in the list.

Test Plan:
Can't reproduce the bug.
Passes kdirmodeltest and kdirlistertest (and many others).

Reviewers: dfaure, #frameworks

Reviewed By: dfaure

Subscribers: elvisangelaccio, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D17619

M  +55   -0    autotests/kdirlistertest.cpp
M  +1    -0    autotests/kdirlistertest.h
M  +4    -3    src/core/kcoredirlister.cpp

https://commits.kde.org/kio/211c3a680ea762ec3a674f2f29de5bbf7ae36d8e
Comment 11 Kerry N 2018-12-27 00:26:32 UTC
Created attachment 117125 [details]
New crash information added by DrKonqi

dolphin (18.08.3) using Qt 5.11.1

- What I was doing when the application crashed:
In dolphin:
Create new folder (maybe call it X)
Paste a few folders into X
Ctrl-x the X folder
Do not paste (ctrl-v)
F2 to rename
Type in new folder name (Y)
Dolphin crashes.

-- Backtrace (Reduced):
#8  0x00007f4944c63aef in KFileItem::KFileItem(KFileItem const&) () at /lib64/libKF5KIOCore.so.5
#9  0x00007f4944d285d5 in KCoreDirListerCache::renameDir(QUrl const&, QUrl const&) () at /lib64/libKF5KIOCore.so.5
#10 0x00007f4944d2a53e in KCoreDirListerCache::slotFileRenamed(QString const&, QString const&, QString const&) () at /lib64/libKF5KIOCore.so.5
[...]
#12 0x00007f4944d4b7e3 in OrgKdeKDirNotifyInterface::FileRenamedWithLocalPath(QString const&, QString const&, QString const&) () at /lib64/libKF5KIOCore.so.5
#13 0x00007f4944d4c983 in OrgKdeKDirNotifyInterface::qt_metacall(QMetaObject::Call, int, void**) () at /lib64/libKF5KIOCore.so.5
Comment 12 Jaime Torres 2019-01-08 09:32:44 UTC
*** Bug 402821 has been marked as a duplicate of this bug. ***
Comment 13 Elvis Angelaccio 2019-01-29 10:51:31 UTC
*** Bug 403418 has been marked as a duplicate of this bug. ***
Comment 14 Masoud 2024-02-20 14:40:23 UTC
Created attachment 165957 [details]
New crash information added by DrKonqi

dolphin (23.08.5) using Qt 5.15.12

Dolphin crashed. When that path was open in Dolphin, I renamed that path in the terminal

-- Backtrace (Reduced):
#4  0x000072adf915ebf2 in ??? () at /usr/lib/libKF5KIOCore.so.5
#5  0x000072adf91533d5 in ??? () at /usr/lib/libKF5KIOCore.so.5
#6  0x000072adf91561eb in ??? () at /usr/lib/libKF5KIOCore.so.5
#7  0x000072adf74c8e27 in ??? () at /usr/lib/libQt5Core.so.5
#8  0x000072adf893e34a in KDirWatch::deleted(QString const&) () at /usr/lib/libKF5CoreAddons.so.5